--- a/Day 6 (30 May 19).ipynb
+++ b/Day 6 (30 May 19).ipynb
@@ -19,7 +19,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Problem 1: Draw a pie plot based on number of wins for each team\n"
+    "## Problem 1\n",
+    "### Problem Statement :\n",
+    "Draw a pie plot based on number of wins for each team\n"
    ]
   },
   {
@@ -69,7 +71,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q2  \tDraw a bar graph for number of matches won (i,e.consider win if the team wins both the toss and match)  for the team “Mumbai Indians” for all years\n",
+    "## Problem 2 \n",
+    "### Problem Statement:\n",
+    "Draw a bar graph for number of matches won (i,e.consider win if the team wins both the toss and match)  for the team “Mumbai Indians” for all years\n",
     "    "
    ]
   },
