--- a/Day12(6June19).ipynb
+++ b/Day12(6June19).ipynb
@@ -625,9 +625,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Problem 1\n",
     "## Handling Missing Values using Scikit-Learn\n"
    ]
   },
@@ -913,10 +921,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " ##  <h3 align =\"center\"> Categorical Data</h3>"
+    " ## Problem 2\n",
+    "<h3 align =\"center\"> Categorical Data</h3>"
    ]
   },
   {
@@ -1234,10 +1250,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <h3 align='center'>Splitting the data</h3>"
+    "## Problem 3\n",
+    "<h3 align='center'>Splitting the data</h3>"
    ]
   },
   {
@@ -1316,9 +1340,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Problem 4\n",
     "<h3 align ='center'>Feature Scaling</h3>"
    ]
   },
